package tech.jorn.adrian.core;

import tech.jorn.adrian.core.infrastructure.Node;

import java.util.Objects;

public interface IIdentifiable {
    public String getID();
    public String getName();
}
