package tech.jorn.adrian.core.graphs.base;

public interface INode {
    String getID();
}
